--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Card</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/variaveis.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
-    <link rel="stylesheet" href="./src/css/fonte.css">
+    <title> Profile card</title>
 </head>
-
 <body>
     <main class="container">
-            <img class="foto" src="./src/imagens/fto.png" alt="imagem de perfil">
-
-            <h1>Marcos Trampusch <span class="cor-idade">22</span></h1>
-
-            <p class="cidade">Campo verde</p>
-    </main>         
-        <div class="secundaria">
-            <p class="texto"><span class="negrito">90k</span> Followers</p>
-            <p class="texto"><span class="negrito">100k</span> Likes</p>
-            <p class="texto"><span class="negrito">20</span> Photos</p>
+        <div class="card">
+            <div class="profile-informations">
+                <img class="image-tamanho" src="./src/imagens/fto.png" alt="Profile picture image">
+                <p>Marcos Trampusch <span class="age">22</span></p>
+                <span class="city">Campo Verde</span>
+            </div>
+            <hr>
+            <ul class="profile-numbers">
+                <li class="info">
+                    <p class="counter">80K</p>
+                    <span class="counter-type">Followers</sp>
+                </li>
+                <li class="info">
+                    <p class="counter">803K</p>
+                    <span class="counter-type">Likes</span>
+                </li>
+                <li class="info">
+                    <p class="counter">1.4K</p>
+                    <span class="counter-type">Photos</span>
+                </li>
+            </ul>
         </div>
+    </main>
 </body>
 </html>
